- create new folder dialog

--- a/filemanager/src/main/res/layout/wm_fm_create_new_folder.xml
+++ b/filemanager/src/main/res/layout/wm_fm_create_new_folder.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditText
-        android:id="@+id/newFolderName"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/tilNewFolderName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:singleLine="true"
-        android:lines="1"
-        android:maxLines="1"/>
+        android:layout_height="wrap_content"
+        app:errorEnabled="true"
+        android:padding="@dimen/wm_fm_default_margin">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/newFolderName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:maxLines="1"
+            android:lines="1"
+            android:singleLine="true"
+            android:hint="@string/wm_fm_hint_new_folder"/>
+
+    </android.support.design.widget.TextInputLayout>
 
 </FrameLayout>
