--- a/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
+++ b/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
@@ -18,6 +18,7 @@
             android:id="@+id/saveField"
             android:orientation="vertical"
             android:layout_width="match_parent"
+            android:layout_centerVertical="true"
             android:layout_height="56dp"
             android:layout_alignParentBottom="true"
             android:visibility="gone">
@@ -30,14 +31,15 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingRight="56dp"
-                android:paddingEnd="56dp"
+                android:paddingRight="64dp"
+                android:paddingEnd="64dp"
                 tools:ignore="RtlSymmetry">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/fileNameToSave"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:imeOptions="actionDone"
                     android:maxLines="1"
                     android:lines="1"
                     android:singleLine="true"
@@ -48,6 +50,7 @@
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fabSave"
                 app:srcCompat="@drawable/wm_fm_ic_save_24dp"
+                app:backgroundTint="@color/wm_fm_fab"
                 app:fabSize="mini"
                 android:layout_marginEnd="@dimen/wm_fm_extra_margin"
                 android:layout_marginRight="@dimen/wm_fm_extra_margin"
