--- a/filemanager/src/main/res/values/colors.xml
+++ b/filemanager/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <!-- A black color with some transparency -->
     <color name="wm_fm_black_transparent">#99000000</color>
 
+    <color name="wm_fm_disabled">#ff616161</color>
+
     <color name="wm_fm_colorPrimaryDark">#ff013038</color>
     <color name="wm_fm_colorPrimary">#ff015360</color>
     <color name="wm_fm_colorAccent">#ff33bc14</color>
